[Update]: fly toml as documented on Flet docs

--- a/fly.toml
+++ b/fly.toml
@@ -6,11 +6,9 @@
 app = "fletimer"
 primary_region = "lax"
 
-[build]
-  builder = "paketobuildpacks/builder:base"
-
-[env]
-  PORT = "8080"
+kill_signal = "SIGINT"
+kill_timeout = 5
+processes = []
 
 [http_service]
   internal_port = 8080
@@ -18,4 +16,41 @@ primary_region = "lax"
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
+  max_machines_running = 1
   processes = ["app"]
+
+[env]
+  FLET_SERVER_PORT = "8080"
+  FLET_FORCE_WEB_VIEW = "true"
+  PORT = "8080"
+
+[experimental]
+  allowed_public_ports = []
+  auto_rollback = true
+
+[[services]]
+  http_checks = []
+  internal_port = 8080
+  processes = ["app"]
+  protocol = "tcp"
+  script_checks = []
+
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+    type = "connections"
+
+  [[services.ports]]
+    force_https = true
+    handlers = ["http"]
+    port = 80
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
+
+  [[services.tcp_checks]]
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 0
+    timeout = "2s"
